Add section page break prevention to Modern template

--- a/resumes/templates/resumes/resume_pdf_modern.html
+++ b/resumes/templates/resumes/resume_pdf_modern.html
@@ -190,9 +190,14 @@
             line-height: 1.2; /* Tighter */
         }
         .tech-details {
-            font-size: 9.5pt; /* Increased */
+            font-size: 9pt; /* Reduced */
             color: #444;
-            margin-top: 3px; /* Reduced */
+            margin-top: 2px; /* Reduced */
+        }
+        section {
+            page-break-inside: avoid;
+            page-break-after: avoid;
+            margin-bottom: 0;
         }
     </style>
 </head>
